--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="?attr/colorPrimary"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <FrameLayout
-        android:id="@+id/content"
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <!-- NavHostFragment для навигации -->
+    <fragment
+        android:id="@+id/nav_host_fragment"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        app:defaultNavHost="true" />
+        android:layout_height="0dp"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/vacancy_nav_graph"
+        app:layout_constraintBottom_toTopOf="@id/bottomNav"
+        app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- Нижняя панель навигации -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomNav"
         style="@style/CustomBottomNavigationView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
+
         android:background="@color/black"
-        android:elevation="16dp"
-        android:fitsSystemWindows="false"
-        app:itemIconSize="20dp"
+        app:menu="@menu/bottom_menu"
         app:itemIconTint="@color/color_tab"
         app:itemTextColor="@color/color_tab"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:elevation="16dp"
         app:labelVisibilityMode="labeled"
-        app:menu="@menu/bottom_menu" />
+        android:fitsSystemWindows="false"/>
 
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
